// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`when rendering a list table with fixed widths renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  overflow: auto;
  width: 100%;
  position: relative;
  margin: 24px 0;
}

.emotion-1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: 100%;
  color: #1C2D38;
  font-size: 13px;
  line-height: 20px;
}

.emotion-2 {
  background-color: #FFFFFF;
  box-shadow: 0 4px #E8EDEB;
  position: relative;
  color: var(--font-color-primary);
  background-color: #FFFFFF;
  box-shadow: 0 4px #E8EDEB;
}

.dark-theme .emotion-2 {
  background-color: #001E2B;
  box-shadow: 0 4px #3D4F58;
}

.emotion-3 {
  padding: 0 8px;
  overflow: hidden;
  padding-left: 32px;
  padding: 10px 8px!important;
  vertical-align: top;
  color: var(--font-color-primary);
  overflow-wrap: anywhere;
  word-break: break-word;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
}

.emotion-3:focus-visible {
  box-shadow: inset;
}

.emotion-3:last-child {
  padding-right: 24px;
}

.emotion-3 * {
  font-size: 13px!important;
}

.emotion-3>div {
  height: unset;
  min-height: unset;
}

.emotion-3>div {
  min-height: unset;
  max-height: unset;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 40px;
  transition-property: min-height,max-height,opacity,padding,transform;
  transition-duration: 150ms;
  transition-timing-function: ease;
  opacity: 1;
  min-height: 40px;
  max-height: 40px;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  text-align: left;
}

.emotion-5 *,
.emotion-5 p,
.emotion-5 a {
  line-height: 20px;
}

.emotion-5>*,
.emotion-5>div p {
  margin: 0 0 12px!important;
}

.emotion-5>div *:last-child,
.emotion-5>*:last-child {
  margin-bottom: 0!important;
}

.emotion-6 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  margin-bottom: 16px;
  color: var(--font-color-primary);
}

.emotion-6 strong,
.emotion-6 b {
  font-weight: 600;
}

.emotion-7 {
  padding: 0 8px;
  overflow: hidden;
  padding: 10px 8px!important;
  vertical-align: top;
  color: var(--font-color-primary);
  overflow-wrap: anywhere;
  word-break: break-word;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
}

.emotion-7:focus-visible {
  box-shadow: inset;
}

.emotion-7:last-child {
  padding-right: 24px;
}

.emotion-7 * {
  font-size: 13px!important;
}

.emotion-7>div {
  height: unset;
  min-height: unset;
}

.emotion-7>div {
  min-height: unset;
  max-height: unset;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

<div
    class="emotion-0"
    tabindex="0"
  >
    <table
      class="emotion-1"
      data-lgid="lg-table"
    >
      <colgroup>
        <col
          style="width: 5%;"
        />
        <col
          style="width: 10%;"
        />
        <col
          style="width: 15%;"
        />
        <col
          style="width: 20%;"
        />
        <col
          style="width: 30%;"
        />
        <col
          style="width: 20%;"
        />
      </colgroup>
      <thead
        class="emotion-2"
      />
      <tbody>
        <tr
          aria-hidden="false"
          class=""
          data-expanded="false"
          data-lgid="lg-table-row"
          data-selected="false"
          id="lg-table-row-0"
        >
          <td
            class="emotion-3"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-4"
              data-state="entered"
            >
              <div
                class="emotion-5"
              >
                <p
                  class="emotion-6"
                >
                  notebook
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-7"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-4"
              data-state="entered"
            >
              <div
                class="emotion-5"
              >
                <p
                  class="emotion-6"
                >
                  50
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-7"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-4"
              data-state="entered"
            >
              <div
                class="emotion-5"
              >
                <p
                  class="emotion-6"
                >
                  8.5x11,in
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-7"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-4"
              data-state="entered"
            >
              <div
                class="emotion-5"
              >
                <p
                  class="emotion-6"
                >
                  A
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-7"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-4"
              data-state="entered"
            >
              <div
                class="emotion-5"
              >
                <p
                  class="emotion-6"
                >
                  college-ruled,perforated
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-7"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-4"
              data-state="entered"
            >
              <div
                class="emotion-5"
              >
                <p
                  class="emotion-6"
                >
                  8
                </p>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`when rendering a list-table directive renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  overflow: auto;
  width: 100%;
  position: relative;
  margin: 24px 0;
}

.emotion-1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: 100%;
  color: #1C2D38;
  font-size: 13px;
  line-height: 20px;
}

.emotion-2 {
  background-color: #FFFFFF;
  box-shadow: 0 4px #E8EDEB;
  position: relative;
  color: var(--font-color-primary);
  background-color: #FFFFFF;
  box-shadow: 0 4px #E8EDEB;
}

.dark-theme .emotion-2 {
  background-color: #001E2B;
  box-shadow: 0 4px #3D4F58;
}

.emotion-3 {
  padding: 0 8px;
  overflow: hidden;
  padding-left: 32px;
  width: 150px;
  padding: 10px 8px!important;
  vertical-align: top;
  color: var(--font-color-primary);
  line-height: 24px;
  font-weight: 600;
  font-size: 13px;
  width: auto;
}

.emotion-3:focus-visible {
  box-shadow: inset;
}

.emotion-3:last-child {
  padding-right: 24px;
}

.emotion-3 * {
  font-size: 13px!important;
}

.emotion-3>div {
  height: unset;
  min-height: unset;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 40px;
  transition-property: min-height,max-height,opacity,padding,transform;
  transition-duration: 150ms;
  transition-timing-function: ease;
  height: 40px;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  text-align: left;
}

.emotion-5 {
  padding: 0 8px;
  overflow: hidden;
  width: 150px;
  padding: 10px 8px!important;
  vertical-align: top;
  color: var(--font-color-primary);
  line-height: 24px;
  font-weight: 600;
  font-size: 13px;
  width: auto;
}

.emotion-5:focus-visible {
  box-shadow: inset;
}

.emotion-5:last-child {
  padding-right: 24px;
}

.emotion-5 * {
  font-size: 13px!important;
}

.emotion-5>div {
  height: unset;
  min-height: unset;
}

.emotion-15:nth-of-type(even) {
  background-color: #F9FBFA;
}

.emotion-15:nth-of-type(even) {
  background-color: #F9FBFA;
}

.dark-theme .emotion-15:nth-of-type(even) {
  background-color: #112733;
}

.emotion-16 {
  padding: 0 8px;
  overflow: hidden;
  padding-left: 32px;
  padding: 10px 8px!important;
  vertical-align: top;
  color: var(--font-color-primary);
  overflow-wrap: anywhere;
  word-break: break-word;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  background-color: #F9FBFA;
  border-right: 3px solid #E8EDEB;
  font-weight: 600;
}

.emotion-16:focus-visible {
  box-shadow: inset;
}

.emotion-16:last-child {
  padding-right: 24px;
}

.emotion-16 * {
  font-size: 13px!important;
}

.emotion-16>div {
  height: unset;
  min-height: unset;
}

.emotion-16>div {
  min-height: unset;
  max-height: unset;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.dark-theme .emotion-16 {
  background-color: #112733;
  border-right: 3px solid #3D4F58;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 40px;
  transition-property: min-height,max-height,opacity,padding,transform;
  transition-duration: 150ms;
  transition-timing-function: ease;
  opacity: 1;
  min-height: 40px;
  max-height: 40px;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  text-align: left;
}

.emotion-18 *,
.emotion-18 p,
.emotion-18 a {
  line-height: 20px;
}

.emotion-18>*,
.emotion-18>div p {
  margin: 0 0 12px!important;
}

.emotion-18>div *:last-child,
.emotion-18>*:last-child {
  margin-bottom: 0!important;
}

.emotion-19 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  margin-bottom: 16px;
  color: var(--font-color-primary);
}

.emotion-19 strong,
.emotion-19 b {
  font-weight: 600;
}

.emotion-20 {
  padding: 0 8px;
  overflow: hidden;
  padding: 10px 8px!important;
  vertical-align: top;
  color: var(--font-color-primary);
  overflow-wrap: anywhere;
  word-break: break-word;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
}

.emotion-20:focus-visible {
  box-shadow: inset;
}

.emotion-20:last-child {
  padding-right: 24px;
}

.emotion-20 * {
  font-size: 13px!important;
}

.emotion-20>div {
  height: unset;
  min-height: unset;
}

.emotion-20>div {
  min-height: unset;
  max-height: unset;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

<div
    class="emotion-0"
    tabindex="0"
  >
    <table
      class="emotion-1"
      data-lgid="lg-table"
    >
      <thead
        class="emotion-2"
      >
        <tr
          data-testid="leafygreen-ui-header-row"
        >
          <th
            class="emotion-3"
            data-lgid="lg-table-header"
            scope="col"
          >
            <div
              class="emotion-4"
            >
              <div>
                name
              </div>
            </div>
          </th>
          <th
            class="emotion-5"
            data-lgid="lg-table-header"
            scope="col"
          >
            <div
              class="emotion-4"
            >
              <div>
                quantity
              </div>
            </div>
          </th>
          <th
            class="emotion-5"
            data-lgid="lg-table-header"
            scope="col"
          >
            <div
              class="emotion-4"
            >
              <div>
                size
              </div>
            </div>
          </th>
          <th
            class="emotion-5"
            data-lgid="lg-table-header"
            scope="col"
          >
            <div
              class="emotion-4"
            >
              <div>
                status
              </div>
            </div>
          </th>
          <th
            class="emotion-5"
            data-lgid="lg-table-header"
            scope="col"
          >
            <div
              class="emotion-4"
            >
              <div>
                tags
              </div>
            </div>
          </th>
          <th
            class="emotion-5"
            data-lgid="lg-table-header"
            scope="col"
          >
            <div
              class="emotion-4"
            >
              <div>
                rating
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          aria-hidden="false"
          class="emotion-15"
          data-expanded="false"
          data-lgid="lg-table-row"
          data-selected="false"
          id="lg-table-row-0"
        >
          <td
            class="emotion-16"
            data-lgid="lg-table-cell"
            role="rowheader"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <div
                class="emotion-18"
              >
                <p
                  class="emotion-19"
                >
                  journal
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-20"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <div
                class="emotion-18"
              >
                <p
                  class="emotion-19"
                >
                  25
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-20"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <div
                class="emotion-18"
              >
                <p
                  class="emotion-19"
                >
                  14x21,cm
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-20"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <div
                class="emotion-18"
              >
                <p
                  class="emotion-19"
                >
                  A
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-20"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <div
                class="emotion-18"
              >
                <p
                  class="emotion-19"
                >
                  brown, lined
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-20"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <div
                class="emotion-18"
              >
                <p
                  class="emotion-19"
                >
                  9
                </p>
              </div>
            </div>
          </td>
        </tr>
        <tr
          aria-hidden="false"
          class="emotion-15"
          data-expanded="false"
          data-lgid="lg-table-row"
          data-selected="false"
          id="lg-table-row-1"
        >
          <td
            class="emotion-16"
            data-lgid="lg-table-cell"
            role="rowheader"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <div
                class="emotion-18"
              >
                <p
                  class="emotion-19"
                >
                  notebook
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-20"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <div
                class="emotion-18"
              >
                <p
                  class="emotion-19"
                >
                  50
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-20"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <div
                class="emotion-18"
              >
                <p
                  class="emotion-19"
                >
                  8.5x11,in
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-20"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <div
                class="emotion-18"
              >
                <p
                  class="emotion-19"
                >
                  A
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-20"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <div
                class="emotion-18"
              >
                <p
                  class="emotion-19"
                >
                  college-ruled,perforated
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-20"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <div
                class="emotion-18"
              >
                <p
                  class="emotion-19"
                >
                  8
                </p>
              </div>
            </div>
          </td>
        </tr>
        <tr
          aria-hidden="false"
          class="emotion-15"
          data-expanded="false"
          data-lgid="lg-table-row"
          data-selected="false"
          id="lg-table-row-2"
        >
          <td
            class="emotion-16"
            data-lgid="lg-table-cell"
            role="rowheader"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <div
                class="emotion-18"
              >
                <p
                  class="emotion-19"
                >
                  paper
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-20"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <div
                class="emotion-18"
              >
                <p
                  class="emotion-19"
                >
                  100
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-20"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <div
                class="emotion-18"
              >
                <p
                  class="emotion-19"
                >
                  8.5x11,in
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-20"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <div
                class="emotion-18"
              >
                <p
                  class="emotion-19"
                >
                  D
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-20"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <div
                class="emotion-18"
              >
                <p
                  class="emotion-19"
                >
                  watercolor
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-20"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <div
                class="emotion-18"
              >
                <p
                  class="emotion-19"
                >
                  10
                </p>
              </div>
            </div>
          </td>
        </tr>
        <tr
          aria-hidden="false"
          class="emotion-15"
          data-expanded="false"
          data-lgid="lg-table-row"
          data-selected="false"
          id="lg-table-row-3"
        >
          <td
            class="emotion-16"
            data-lgid="lg-table-cell"
            role="rowheader"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <div
                class="emotion-18"
              >
                <p
                  class="emotion-19"
                >
                  planner
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-20"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <div
                class="emotion-18"
              >
                <p
                  class="emotion-19"
                >
                  75
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-20"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <div
                class="emotion-18"
              >
                <p
                  class="emotion-19"
                >
                  22.85x30,cm
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-20"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <div
                class="emotion-18"
              >
                <p
                  class="emotion-19"
                >
                  D
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-20"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <div
                class="emotion-18"
              >
                <p
                  class="emotion-19"
                >
                  2019
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-20"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <div
                class="emotion-18"
              >
                <p
                  class="emotion-19"
                >
                  10
                </p>
              </div>
            </div>
          </td>
        </tr>
        <tr
          aria-hidden="false"
          class="emotion-15"
          data-expanded="false"
          data-lgid="lg-table-row"
          data-selected="false"
          id="lg-table-row-4"
        >
          <td
            class="emotion-16"
            data-lgid="lg-table-cell"
            role="rowheader"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <div
                class="emotion-18"
              >
                <p
                  class="emotion-19"
                >
                  postcard
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-20"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <div
                class="emotion-18"
              >
                <p
                  class="emotion-19"
                >
                  45
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-20"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <div
                class="emotion-18"
              >
                <p
                  class="emotion-19"
                >
                  10x,cm
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-20"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <div
                class="emotion-18"
              >
                <p
                  class="emotion-19"
                >
                  D
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-20"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <div
                class="emotion-18"
              >
                <p
                  class="emotion-19"
                >
                  double-sided,white
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-20"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-17"
              data-state="entered"
            >
              <div
                class="emotion-18"
              >
                <p
                  class="emotion-19"
                >
                  2
                </p>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
